<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/button_favorite"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textOn=""
            android:textOff=""
            android:background="@drawable/favorite_toggle"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_marginTop="16dp"
            android:layout_marginStart="360dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_item_photo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="135dp"
            android:layout_marginTop="24dp"
            android:src="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_set_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_set_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_set_followers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/followers"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_set_following"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/following"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_set_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/company"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_set_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/location"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_set_repository"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/repository"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <com.google.android.material.tabs.TabLayout
            android:layout_marginTop="16dp"
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:layout_marginTop="16dp"
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.viewpager2.widget.ViewPager2>

    </LinearLayout>

</ScrollView>